@@ -39,8 +39,9 @@ START_RELOC_NUMBERS (elf_spu_reloc_type)
      RELOC_NUMBER (R_SPU_ADDR10I,	11)
      RELOC_NUMBER (R_SPU_ADDR16I,	12)
      RELOC_NUMBER (R_SPU_REL32,		13)
-     RELOC_NUMBER (R_SPU_PPU32,		14)
-     RELOC_NUMBER (R_SPU_PPU64,		15)
+     RELOC_NUMBER (R_SPU_ADDR16X,	14)
+     RELOC_NUMBER (R_SPU_PPU32,		15)
+     RELOC_NUMBER (R_SPU_PPU64,		16)
 END_RELOC_NUMBERS (R_SPU_max)
 
 /* Program header extensions */
